Delete div from markup

--- a/source/markup/index.pug
+++ b/source/markup/index.pug
@@ -5,12 +5,12 @@ block title
 
 block content
   header.header
-    div.header__wrap
+    .header__wrap
 
-      div.lawyer
+      .lawyer
         p.lawyer__name Адвокатский кабинет Якубов Рашад Киязович
         p.lawyer__description Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587
-        div.lawyer__contacts
+        .lawyer__contacts
           p.lawyer__adress Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ 'Графит' 2 этаж, офис 28
           p.lawyer__connections
             a(href='+7 (812) 962 19 51').lawyer__phone +7 (812) 962 19 51
@@ -32,11 +32,11 @@ block content
     p.header__note Первичная устная консультация - бесплатно!
 
   main.main-content
-    div.main-content__wrap
+    .main-content__wrap
       aside.sidebar
         nav.service-menu
-          div.service-menu__wrapper
-            div.service-menu__name Услуги
+          .service-menu__wrapper
+            .service-menu__name Услуги
             ul.service-menu__list
               li.service-menu__item
                 a(href='#').service-menu__link Недвижимость
@@ -86,7 +86,7 @@ block content
                 a(href='#').service-menu__link Юридическая консультация
 
         section.latest-articles
-          div.latest-articles__wrapper
+          .latest-articles__wrapper
             ul.latest-article__name Статьи
               li.latest-article__item
                 p.latest-article__name-article Что изменилось в правилах регистрации недвижимости
@@ -103,7 +103,7 @@ block content
             a(href='#').latest-article__link Все статьи
 
       section.cms-content
-        div.cms-content__wrapper
+        .cms-content__wrapper
           h1 Адвокат Якубов Рашад Киязович
 
           p Вы находитесь на сайте адвоката Санкт-Петербурга. Я оказываю юридические услуги в Ленинградской области.
@@ -113,7 +113,7 @@ block content
 
           h2 Юридическая помощь
 
-          div.advantages
+          .advantages
             ul.advantages__list
               li.advantages__item
                 img(src='img/content/legal-hammer.svg' alt='Судейский молоток', width='60', height='60').advantages__icon
@@ -190,7 +190,7 @@ block content
       .lawyer
         p.lawyer__name Адвокатский кабинет Якубов Рашад Киязович
         p.lawyer__description Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587
-        div.lawyer__contacts
+        .lawyer__contacts
           p.lawyer__adress Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ 'Графит' 2 этаж, офис 28
           p.lawyer__connections
             a(href='+7 (812) 962 19 51').lawyer__phone +7 (812) 962 19 51
