--- a/source/markup/mixins.pug
+++ b/source/markup/mixins.pug
@@ -1,2 +1,19 @@
-mixin title (title, url, additionClass)
-  .title(style=`background-image: url('img/decor/${url}')` class=additionClass)= title
+mixin about-advokat (className)
+  .lawyer(class=`lawyer--${className}`)
+    p.lawyer__name Адвокатский кабинет Якубов Рашад Киязович
+      p.lawyer__description Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587
+      .lawyer__contacts
+        p.lawyer__adress Санкт-Петербург, г. Пушкин ул. Оранжерейная д.48 БЦ "Графит" 2 этаж, офис 28
+        p.lawyer__connections
+          a(href='tel:+7-(812)-962-19-51').lawyer__phone +7 (812) 962 19 51
+          a(href='mailto:9621951@mail.ru').lawyer__email 9621951@mail.ru
+
+mixin nav (className, name, items)
+  nav(class=`${className}`)
+    div(class=`${className}__wrapper`)
+      div(class=`${className}__name`)=name
+        ul(class=`${className}__list`)
+          each item in items
+            li(class=`${className}__item`)
+              a(class=`${className}__link` href='#')= item
+
