--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -391,7 +391,7 @@ template {
   display: none; }
 
 html, body {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	background-color: #eee;
   width: 1024px;
