--- a/source/markup/main-template.pug
+++ b/source/markup/main-template.pug
@@ -8,7 +8,8 @@ html(lang='ru')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width')
-    link(href='css/main.css', rel='stylesheet')
+    link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400&subset=cyrillic" rel="stylesheet")
+    link(href='css/style.css', rel='stylesheet')
 
     // SEO Задание тега Title
     title
