--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -2,12 +2,10 @@
   @include wrap;
   padding-top: 11px;
   padding-bottom: 15px;
-  height: 280px;
   color: $white;
   background-image: url('../img/decoration/header.jpg');
-  background-position: 0 0;
+  background-position: top center;
   background-repeat: no-repeat;
-  background-size: contain;
 }
 
 .main-nav__list {
@@ -18,7 +16,7 @@
 }
 
 .main-nav__item {
-  margin-right: 84px;
+  margin-right: 8.75%;
 
   &:last-child {
     margin-right: 0;
