--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -4,3 +4,5 @@
 @import '../blocks/header.scss';
 @import '../blocks/lawyer.scss';
 @import '../blocks/main-nav.scss';
+@import '../blocks/main-content.scss';
+@import '../blocks/sidebar.scss';
