--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -3,7 +3,7 @@ $font-light: 'Open Sans Light', 'Arial Italic', sans-serif;
 
 $content-size: 14px;
 $content-color: #333333;
-$content-bg: #dddddd;
+$content-bg: #f1f2f2;
 
 $global-bg: #3f4754;
 $header-bg: #dde1e8;
@@ -12,20 +12,5 @@ $black: #000000;
 $white: #ffffff;
 $navy: #183f7c;
 
-@mixin wrap {
-  padding-left: 3.125%;
-  padding-right: 3.125%;
-}
-
-@mixin ul-line {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  align-items: center;
-}
-
-@mixin text($font-size, $line-height) {
-  font-size: $font-size;
-  line-height: $line-height;
-}
+$sidebar-text: #333333;
+$bg-link-hover: #c6c6c6;
