--- a/source/markup/main-template.pug
+++ b/source/markup/main-template.pug
@@ -8,12 +8,13 @@ html(lang='ru')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width')
-    link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400&subset=cyrillic" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600&subset=cyrillic" rel="stylesheet")
     link(href='css/style.css', rel='stylesheet')
 
     // SEO Задание тега Title
-    title
-      block title
+    title Адвокатский кабинет Якубов Рашад Киязович
+    // SEO Задание тега Description
+    meta(name='description', content='Адвокатская Палата Санкт-Петербурга, Адвокатский кабинет, Якубов Рашад Киязович, регистрационный номер в реестре адвокатов 78/5587')
 
   body
     block content
