--- a/source/styles/base/global.scss
+++ b/source/styles/base/global.scss
@@ -18,6 +18,7 @@ body {
   margin: 0 auto;
   font-family: $font-face;
   font-size: 14px;
+  line-height: 16px;
   font-weight: 400;
   color: $content-color;
   background-color: $global-bg;
