--- a/source/styles/blocks/lawyer.scss
+++ b/source/styles/blocks/lawyer.scss
@@ -13,10 +13,10 @@
 }
 
 .lawyer__name {
+  @include text(22px, 24px);
   margin-top: 0;
   margin-bottom: 7px;
   text-transform: uppercase;
-  font-size: 22px;
   font-weight: 600;
 }
 
@@ -26,9 +26,9 @@
 }
 
 .lawyer__contacts {
+  @include text(16px, 18px);
   width: 440px;
   font-size: 16px;
-  line-height: 18px;
 }
 
 .lawyer__connections {
