--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -1,8 +1,11 @@
 @import '../base/normalize.scss';
 @import '../base/variables.scss';
+@import '../base/mixins.scss';
 @import '../base/global.scss';
 @import '../blocks/header.scss';
 @import '../blocks/lawyer.scss';
 @import '../blocks/main-nav.scss';
 @import '../blocks/main-content.scss';
 @import '../blocks/sidebar.scss';
+@import '../blocks/service-menu.scss';
+@import '../blocks/latest-articles.scss';
