--- a/source/styles/blocks/service-menu.scss
+++ b/source/styles/blocks/service-menu.scss
@@ -22,7 +22,7 @@
   display: inline-block;
   width: 100%;
   padding: 8px 20px;
-  color: $sidebar-text;
+  color: $content-color;
 
   &:hover,
   &:focus {
