--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -9,3 +9,5 @@
 @import '../blocks/sidebar.scss';
 @import '../blocks/service-menu.scss';
 @import '../blocks/latest-articles.scss';
+@import '../blocks/cms-content.scss';
+@import '../blocks/advantages.scss';
