--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -6,6 +6,7 @@
   background-image: url('../img/decoration/header.jpg');
   background-position: top center;
   background-repeat: no-repeat;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.35);
 }
 
 .main-nav__list {
