--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -11,5 +11,7 @@ $header-bg: #dde1e8;
 $black: #000000;
 $white: #ffffff;
 $navy: #183f7c;
+$green: #007f00;
+$red: #b70001;
 
 $bg-link-hover: #c6c6c6;
