--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -11,3 +11,4 @@
 @import '../blocks/latest-articles.scss';
 @import '../blocks/cms-content.scss';
 @import '../blocks/advantages.scss';
+@import '../blocks/feedback.scss';
