--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -12,3 +12,4 @@
 @import '../blocks/cms-content.scss';
 @import '../blocks/advantages.scss';
 @import '../blocks/feedback.scss';
+@import '../blocks/certificates.scss';
