--- a/source/markup/index.pug
+++ b/source/markup/index.pug
@@ -83,14 +83,16 @@ block content
               button.feedback__send(type='submit') Отправить
 
         section.certificates
-          h2.certificates__name Свидетельство и cертификаты
-          ul.certificates__list
-            each certificate, value in certificates
-              li.certificates__item
-                a(href= certificate.link, aria-label='Увеличить фото').certificates__link
-                  picture.certificates__thumb
-                  //- source(srcset= certificate.web, type='image/webp')
-                  img(src= certificate.img, alt= certificate.alt,  width="120" height="174")
+          .certificates__wrap
+            h2.certificates__name Свидетельство и cертификаты
+            a(href="#", aria-label='Посмотреть все сертификаты').certificates__all-link Все сертификаты »
+            ul.certificates__list
+              each certificate, value in certificates
+                li.certificates__item
+                  a(href= certificate.link, aria-label='Увеличить фото').certificates__link
+                    picture.certificates__thumb
+                    //- source(srcset= certificate.web, type='image/webp')
+                    img(src= certificate.img, alt= certificate.alt,  width="120" height="174")
   footer.footer
     .footer__wrap
 
