--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -1,5 +1,4 @@
 $font-face: 'Open Sans', 'Arial', sans-serif;
-$font-light: 'Open Sans Light', 'Arial Italic', sans-serif;
 
 $content-size: 14px;
 $content-color: #333333;
@@ -13,5 +12,4 @@ $white: #ffffff;
 $navy: #183f7c;
 $green: #007f00;
 $red: #b70001;
-
-$bg-link-hover: #c6c6c6;
+$grey: #c6c6c6;
