--- a/source/styles/blocks/service-menu.scss
+++ b/source/styles/blocks/service-menu.scss
@@ -27,7 +27,7 @@
   &:hover,
   &:focus {
     color: $white;
-    background-color: $bg-link-hover;
+    background-color: $grey;
     outline: none;
   }
 
