--- a/source/styles/path/style.scss
+++ b/source/styles/path/style.scss
@@ -13,3 +13,5 @@
 @import '../blocks/advantages.scss';
 @import '../blocks/feedback.scss';
 @import '../blocks/certificates.scss';
+@import '../blocks/footer.scss';
+@import '../blocks/social.scss';
